src/main/webapp/VAADIN/themes/mytheme/mytheme.scss
// If you edit this file you need to compile the theme. See README.md for details.
// Global variable overrides. Must be declared before importing Valo.
// Defines the plaintext font size, weight and family. Font size affects general component sizing.
//$v-font-size: 16px;
//$v-font-weight: 300;
//$v-font-family: "Open Sans", sans-serif;
// Defines the border used by all components.
//$v-border: 1px solid (v-shade 0.7);
//$v-border-radius: 4px;
// Affects the color of some component elements, e.g Button, Panel title, etc
//$v-background-color: hsl(210, 0%, 98%);
// Affects the color of content areas, e.g  Panel and Window content, TextField input etc
//$v-app-background-color: $v-background-color;
// Affects the visual appearance of all components
//$v-gradient: v-linear 8%;
//$v-bevel-depth: 30%;
//$v-shadow-opacity: 5%;
// Defines colors for indicating status (focus, success, failure)
//$v-focus-color: valo-focus-color(); // Calculates a suitable color automatically
//$v-friendly-color: #2c9720;
//$v-error-indicator-color: #ed473b;
// For more information, see: https://vaadin.com/book/-/page/themes.valo.html
// Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
@import "../valo/valo.scss";
@import 'colors-pop';
@import 'elements.scss';

$width-page-min: 768px; // tablets: yes, mobiles: no

@mixin mytheme {
  @include valo;
  @include elements;

  // layout
  #mainPageContainer {
    #headSection {
      position: fixed;
      top: 0;
      width: 100%;
      min-width: $width-page-min;
      height: 105px;
    }

    #mainSection {
      position: absolute;
      top: 105px;
      width: 100%;
      min-width: $width-page-min;
    }

    #footerSection {
      position: fixed;
      bottom: 0;
      width: 100%;
      min-width: $width-page-min;
    }

    #navSection {
      float: left;
      width: 150px;
    }

    #appSection {
      float: left;
      min-width: 600px;
      width: calc(100% - 150px);
    }
  }

  // header
  #headerContainer {
    @include linear-gradient(to top left, $color-primary-2, $color-secondary-1-2);
    padding: 1rem;
    color: $color-font-secondary;

    #siteLogo {
      font-size: $v-font-size--large;
      font-style: $v-font-weight--header;
      margin-bottom: 0.5em;
    }

    #headerLeft {
      float: left;
    }

    #headerRight {
      float: right;
      text-align: right;
    }
  }

  // navigation
  #navSection {
    padding: 1em;

    *:focus,
    *:focus:after {
      outline: none;
      border: none;
      box-shadow: none;
    }

    #navMenuWrapper .v-button {
      background: none;
      color: $color-link;
      text-align: left;
      padding: 0;

      &:hover,
      .NavVisited,
      &:after {
        background: none;
        text-decoration: underline;
      }

      &:focus {
        text-decoration: underline;
      }
    }
  }

  // main canvas
  #appSection {
  }

  // footer
  #footerSection {
    #footerBar {
      @include linear-gradient(to top left, $color-secondary-1-2, $color-primary-2);
      color: $color-font-secondary;
      font-size: $v-font-size--small;
      padding: 0.25em 1em;
    }
  }
}

